crates/aion-awl/tests/fixtures/rev2/loop-outcomes/invalid/substep_route_escape.awl
//! An inner step routes to a step outside its parent — the boundary must hold.
workflow prepare_dataset
  input source: String

  outcome prepared: type Prepared, route success
  outcome hollow_source: type Hollow, route failure

type Batch    { rows: Int, path: String }
type Prepared { path: String, rows: Int }
type Hollow   { reason: String }

worker data
  action fetch(source: String) -> Batch
    node shell, timeout 10m
  action clean(path: String) -> Batch
    node shell, timeout 10m
  action archive(path: String) -> Nil
    node shell, timeout 10m

step prepare
  step fetch_batch
    fetch(source: source) -> raw
    outcome full: when raw.rows > 0, route scrub
    outcome nothing: otherwise, route report

  step scrub
    clean(path: raw.path) -> cleaned

  outcome done: when cleaned.rows > 0,
    route prepared(path: cleaned.path, rows: cleaned.rows)
  outcome hollow: otherwise, route report

step report
  archive(path: source)

  outcome empty_name: when source == "", route hollow_source(reason: "empty source name")
  outcome plain: otherwise, route hollow_source(reason: "nothing to prepare")
